rtest/tests/jsr335/Semantics/LambdaExpressions/DefinitelyAssigned/ShouldFail/syntax07/Test.java
// .result=COMPILE_FAIL

public class Test {
	public interface A {
		A m();
	}
	
	public static void main(String[] arg) {
		A a = () -> () -> a.m();
	}
}